--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body{
 	font-size: 14px;
-	font-family: "Caraman", serif;
+	font-family: "Catamaran", serif;
 }
 header{
 	background-color: #000;
